@@ -217,11 +217,11 @@ public class TestProcInstrRead
                     break;
                 case 4:
                     method = "getNamespaceCount";
-                    result = new Integer(sr.getNamespaceCount());
+                    result = Integer.valueOf(sr.getNamespaceCount());
                     break;
                 case 5:
                     method = "getAttributeCount";
-                    result = new Integer(sr.getAttributeCount());
+                    result = Integer.valueOf(sr.getAttributeCount());
                     break;
                 case 6:
                     method = "getText";
@@ -233,11 +233,11 @@ public class TestProcInstrRead
                     break;
                 case 8:
                     method = "getTextStart";
-                    result = new Integer(sr.getTextStart());
+                    result = Integer.valueOf(sr.getTextStart());
                     break;
                 case 9:
                     method = "getTextLength";
-                    result = new Integer(sr.getTextLength());
+                    result = Integer.valueOf(sr.getTextLength());
                     break;
                 }
                 fail("Expected IllegalStateException, when calling "
